# WOSTCS2

./: README.md  index.html  pyproject.toml
output/: demo_manifest.json  discovered_players.json  player_identity.csv  player_match_stats.json  player_matches.json  player_summary.json  sheet_versions.json  summary.json
output/match_details/: 12tLxoPo2boEf2dIebBCmKkYS6oOdytVH.json  13oKJWDt0mUi5AdQoZWphcBwhpUkYdncz.json  13wOf_5EFVoe0CBXzQTX2iIGFrddqk1Qe.json  14laMSQ31F-sygeNCQzdaXUpkiU5RlsF1.json  14nzUtW9zH9schTuBnQhYjxCysYyt9hRv.json  18OACrDXHVhgrIRbETQM15_0TYo5BWWVK.json  1BYgBjOBrrPOdkH6otfSX5V65L8OIgXUW.json  1BpG_VmUdJ0EWxqEpEb1butbWsVxBV4Uk.json  1Dtx7-UQ0knSceGLmsJPZio1AL4PRrl-A.json  1F-CJXPsvD0_YdKQlETfDwlz2SeJYmIH7.json  1FIAnkbt-bV-gxziTWsizv0JEdDKE-nnE.json  1FjszzDDKzBiCyilyMO3xdwUmShBzpKYT.json  1IxWHbS-L7WKMkmwgQFs8XeXjLKrj--7r.json  1Kb-_DOKuIhIJtb5ynouhriw9SaKe4pDW.json  1LT4X0c1JdWUdsuWG1yQXZHxNUZlo7dyH.json  1LiUCheIOId3UveiDLIEjyYOAGPI0biJC.json  1OJgjzQ2xvuWXUFrjhqJfMTx91ls07VNK.json  1RUntxc6aQFLYG7qLdX2PlGe81tKgLK_Z.json  1RVI57MseUBqBS8YxFvqakxm9coRqrOlN.json  1R_uTncrA0yuwa7NVw-77lyjQDEsqhNAI.json  1Sa5yiybVSzhJ-yPjws_7t87V4hKUKlS0.json  1UOQR9uE1_Aejzdkau68WekDr8CD6rNA5.json  1USBtCmLvpn6LBc4ufNHn3P35ujGB5wjM.json  1WumIAouab3sVGU52uYeceXtCj6iLYJRv.json  1WxOlHOpGt5ycDdRtqEw3zJNWFC49FQrI.json  1XDiS05FEhriANKR40XmZDpF_2buOru37.json  (+28 more)
output/sheets/: roster.csv  (+1 more)
tests/: test_analytics.py  test_drive.py  test_manifest.py  test_package_reader.py  test_pipeline.py  test_roster.py
web/: app.js  index.html  match.html  match.js  styles.css
(+69 files in other folders)
