[project]
name = "cs2-demo-analyse"
version = "0.1.0"
description = "Batch CS2 demo identity discovery and long-term player analytics."
requires-python = ">=3.10"
dependencies = [
  "demoparser2>=0.41.0",
  "google-api-python-client>=2.0.0",
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "requests>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
cs2demo = "cs2demo_analyse.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
